--- a/maket_№3_Wake&Bake/index.html
+++ b/maket_№3_Wake&Bake/index.html
@@ -17,7 +17,7 @@
             <div class="header__top">
                 <div class="container">
                     <div class="header__top-inner">
-                        <a class="header__logo" href="#">
+                        <a class="header__logo" href="/">
                             <img src="img/icons/logos/logo-dark.svg" alt=" Логотип Wake Bake">
                         </a>
                         <nav class="header__nav">
@@ -126,8 +126,9 @@
                             </li>
                         </ul>
                     </div>
+                </div>
             </section>
-            <section class="main__program program"  id="programa">
+            <section class="main__program program" id="programa">
                 <div class="container">
                     <h2 class="program__title title">
                         Программа обучения
@@ -158,8 +159,7 @@
                     <div class="program__tab-content tab-content tab-content--show" id="tab1">
                         <ul class="accordion-list">
                             <li class="accordion-list__item">
-                                <!-- <li class="accordion-list__item accordion-list__item--opened"> -->
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Начало кондитерского пути и создание первого торта
                                     </h3>
@@ -174,7 +174,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -224,7 +224,7 @@
                                 </div>
                             </li>
                             <li class="accordion-list__item">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Медовик и капкейки
                                     </h3>
@@ -239,7 +239,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -281,8 +281,6 @@
                                     </div>
                                 </div>
                             </li>
-
-
                             <!-- <details class="accordion">
                             <summary class="accordion__title title">
                                 Начало кондитерского пути и создание первого торта
@@ -335,11 +333,10 @@
                         </details> -->
                         </ul>
                     </div>
-
                     <div class="program__tab-content tab-content" id="tab2">
                         <ul class="accordion-list">
                             <li class="accordion-list__item ">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Песочное тесто и чизкейк
                                     </h3>
@@ -354,7 +351,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -403,7 +400,7 @@
                                 </div>
                             </li>
                             <li class="accordion-list__item">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Бисквиты
                                     </h3>
@@ -418,7 +415,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -466,7 +463,7 @@
                     <div class="program__tab-content tab-content" id="tab3">
                         <ul class="accordion-list">
                             <li class="accordion-list__item ">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Дрожжевое тесто
                                     </h3>
@@ -481,7 +478,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -517,7 +514,7 @@
                                 </div>
                             </li>
                             <li class="accordion-list__item">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Работа с кремами
                                     </h3>
@@ -532,7 +529,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -574,7 +571,7 @@
                     <div class="program__tab-content tab-content" id="tab4">
                         <ul class="accordion-list">
                             <li class="accordion-list__item ">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Mille-feuille, или Наполеон
                                     </h3>
@@ -589,7 +586,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -626,7 +623,7 @@
                                 </div>
                             </li>
                             <li class="accordion-list__item">
-                                <button class="accordion-list__control" type="button">
+                                <a class="accordion-list__control" href="#">
                                     <h3 class="accordion-list__control-title">
                                         Завершение курса
                                     </h3>
@@ -641,7 +638,7 @@
                                                 fill="#FFA55C" />
                                         </svg>
                                     </div>
-                                </button>
+                                </a>
                                 <div class="accordion-list__content">
                                     <div class="accordion-content">
                                         <div class="accordion-content__col">
@@ -716,7 +713,7 @@
 
                 </div>
             </section>
-            <section class="main__gallery gallery"  id="photo-gallery">
+            <section class="main__gallery gallery" id="photo-gallery">
                 <div class="container">
                     <div class="gallery__inner">
                         <div class="gallery__img">
@@ -808,7 +805,7 @@
                     <div class="testimonials__inner">
                         <div class="testimonials__info">
                             <div class="testimonials__title title">
-                                Обратная связь от наших учеников
+                                <h3>Обратная связь от наших учеников</h3>
                             </div>
                             <div class="testimonials__text">
                                 Все наши ученики абсолютно разные, и мы к каждому из них находим
@@ -839,7 +836,6 @@
                                         fill="#FFA55C" />
                                 </svg>
                             </button>
-
                         </div>
                     </div>
                     <div class="testimonials__slider swipper">
@@ -944,6 +940,7 @@
                         </div>
                         <div class="testimonials__scrollbar swiper-scrollbar"></div>
                     </div>
+                </div>
             </section>
             <section class="contact" id="contacts">
                 <div class="container">
@@ -953,8 +950,8 @@
                         </div>
                         <div class="contact__body">
                             <h2 class="contact__title title">Оставить заявку на обучение</h2>
-                            <p class="contact__text">Заполни контактные данные, и наш менеджер свяжется с тобой в
-                                ближайшее время</p>
+                            <span class="contact__text">Заполни контактные данные, и наш менеджер свяжется с тобой в
+                                ближайшее время</span>
                             <form class="contact__form">
                                 <label class="contact__label field">
                                     <input class="modal__form-input field__input" type="text" placeholder="Имя">
@@ -972,9 +969,10 @@
                                     </label> -->
                                 <label class="contact__check-label">
                                     <input class="contact__checkbox" type="checkbox">
-                                    <p>
-                                        Нажимая на кнопку, вы соглашаетесь с <a class="contact__checkbox-link" href="#" target="_blank">политикой конфиденциальности</a>
-                                    </p>
+                                    <span>
+                                        Нажимая на кнопку, вы соглашаетесь с <a class="contact__checkbox-link" href="#"
+                                            target="_blank">политикой конфиденциальности</a>
+                                    </span>
                                 </label>
                                 <button class="contact__button button" type="submit">
                                     Записаться на курс
@@ -991,7 +989,7 @@
         <div class="container">
             <div class="footer__inner">
                 <div class="footer__col">
-                    <a class="footer__logo" href="#">
+                    <a class="footer__logo" href="/">
                         <img src="img/icons/logos/logo-light.svg" alt=" Логотип Wake Bake">
                     </a>
                     <p class="footer__logo-text">Школа кондитерского искусства</p>
@@ -1077,7 +1075,6 @@
             </div>
         </div>
     </footer>
-    </div>
     <div class="modal modal--opened">
         <div class="modal__window">
             <a class="modal__cancel" href="#">
