--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -13,33 +13,35 @@
 <body class="body">
     <div class="wrapper">
         <header class="header">
-            <div class="container">
-                <div class="header__top">
-                    <ul class="header__nav">
-                        <li class="header__item">
-                            <a class="header__link" href="#">ALL</a>
-                        </li>
-                        <li class="header__item">
-                            <a class="header__link" href="#">footwear</a>
-                        </li>
-                        <li class="header__item">
-                            <a class="header__link" href="#">apparel</a>
-                        </li>
-                        <li class="header__item">
-                            <a class="header__link" href="#">basketball</a>
-                        </li>
-                        <li class="header__item">
-                            <a class="header__link" href="#">slides</a>
-                        </li>
-                    </ul>
-                    <div class="header__search">
-                        <img src="img/icons/search-normal.svg" alt="Поиск"> 
-                        <p>Search</p>
+            <div class="header__top">
+                <div class="container">
+                    <div class="header__inner">
+                        <ul class="header__nav">
+                            <li class="header__item">
+                                <a class="header__link" href="#">ALL</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__link" href="#">footwear</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__link" href="#">apparel</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__link" href="#">basketball</a>
+                            </li>
+                            <li class="header__item">
+                                <a class="header__link" href="#">slides</a>
+                            </li>
+                        </ul>
+                        <div class="header__search">
+                            <img src="img/icons/search-normal.svg" alt="Поиск"> 
+                            <p>Search</p>
+                        </div>
                     </div>
                 </div>
-                <div class="header__hero">
+            <div class="header__hero">
                     
-                </div>
+            </div>
             </div>
         </header>
     </div>
