--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -33,35 +33,39 @@
                                 <a class="header__link" href="#">slides</a>
                             </li>
                         </ul>
-                        <div class="header__search">
+                        <button class="header__search" type="button">
                             <img src="img/icons/search-normal.svg" alt="Поиск">
-                            <p>Search</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="header__hero">
-                    <div class="header__hero-title">
-                        <p>air</p>
-                        <p>max</p>
-                    </div>
-                    <!-- Swiper -->
-                    <div class="header__swiper swiper mySwiper">
-                        <div class="header__wrapper swiper-wrapper">
-                            <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
-                            <div class="header__slide swiper-slide">Slide 2</div>
-                            <div class="header__slide swiper-slide">Slide 3</div>
-                            <div class="header__slide swiper-slide">Slide 4</div>
-                            <div class="header__slide swiper-slide">Slide 5</div>
-                            <div class="header__slide swiper-slide">Slide 6</div>
-                            <div class="header__slide swiper-slide">Slide 7</div>
-                            <div class="header__slide swiper-slide">Slide 8</div>
-                            <div class="header__slide swiper-slide">Slide 9</div>
-                        </div>
-                        <div class="header__pagination swiper-pagination"></div>
+                            <span>Search </span>
+                        </button>
                     </div>
                 </div>
             </div>
+            <div class="header__hero">
+                <div class="header__hero-title">
+                    air max
+                </div>
+                <div class="header__hero-bottom">
+                    <button class="header__button-pay" type="button">
+                        <a href="#">BUY NOW</a>
+                    </button>
+                </div>
+                <!-- Swiper -->
+                <div class="header__slider swiper">
+                    <div class="header__wrapper swiper-wrapper">
+                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide">5<img src="img/decor/footer_sneakers.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="header__pagination swiper-pagination"></div>
+
+            </div>
         </header>
+        <main class="main">
+        
+        </main>
     </div>
 
     <script src="js/swiper-bundle.min.js"></script>
