--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -52,15 +52,14 @@
                 <!-- Swiper -->
                 <div class="header__slider swiper">
                     <div class="header__wrapper swiper-wrapper">
-                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide">5<img src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
                     </div>
                 </div>
                 <div class="header__pagination swiper-pagination"></div>
-
             </div>
         </header>
         <main class="main">
