--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -45,25 +45,71 @@
                     air max
                 </div>
                 <div class="header__hero-bottom">
-                    <button class="header__button-pay" type="button">
+                    <button class="button-pay" type="button">
                         <a href="#">BUY NOW</a>
                     </button>
                 </div>
                 <!-- Swiper -->
                 <div class="header__slider swiper">
                     <div class="header__wrapper swiper-wrapper">
-                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
-                        <div class="header__slide swiper-slide"><img class="header__slide-img" src="img/decor/footer_sneakers.png" alt=""></div>
+                        <div class="header__slide swiper-slide">
+                            <div class="header__slide-img">
+                                <img src="img/decor/footer_sneakers.png" alt="">
+                            </div>
+                        </div>
+                        <div class="header__slide swiper-slide">
+                            <div class="header__slide-img">
+                                <img src="img/decor/footer_sneakers.png" alt="">
+                            </div>
+                        </div>
+                        <div class="header__slide swiper-slide">
+                            <div class="header__slide-img">
+                                <img src="img/decor/footer_sneakers.png" alt="">
+                            </div>
+                        </div>
+                        <div class="header__slide swiper-slide">
+                            <div class="header__slide-img">
+                                <img src="img/decor/footer_sneakers.png" alt="">
+                            </div>
+                        </div>
+                        <div class="header__slide swiper-slide">
+                            <div class="header__slide-img">
+                                <img src="img/decor/footer_sneakers.png" alt="">
+                            </div>
+                        </div>
+
                     </div>
                 </div>
                 <div class="header__pagination swiper-pagination"></div>
             </div>
         </header>
         <main class="main">
-        
+            <section class="sellers-top">
+                <div class="container">
+                    <div class="sellers-top__inner">
+                        <span class="sellers-top__title">Top Sellers</span>
+                        <div class="controls-bar">
+                            <button class="filters">
+                                <img src="img/icons/filter_alt.svg" alt="">
+                                FILTERS
+                            </button>
+                            <button class="sort">
+                                <img src="img/icons/sort_black.svg" alt="">
+                                SORT BY
+                            </button>
+                            <div class="action-icons">
+                                <button class="icon-btn"><img src="img/icons/menu.svg" alt=""></button>
+                                <button class="icon-btn"><img src="img/icons/plitka.svg" alt=""></button>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="sellers-top__slider"></div>
+                    <button class="filter__all" type="button">
+                        see all
+                    </button>
+                </div>
+            </section>
         </main>
     </div>
 
