--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -45,7 +45,7 @@
                     air max
                 </div>
                 <div class="header__hero-bottom">
-                    <button class="button-pay" type="button">
+                    <button class="button__pay" type="button">
                         <a href="#">BUY NOW</a>
                     </button>
                 </div>
