--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -18,7 +18,7 @@
                     <div class="header__inner">
                         <ul class="header__nav">
                             <li class="header__item">
-                                <a class="header__link" href="#">ALL</a>
+                                <a class="header__link" href="#">all</a>
                             </li>
                             <li class="header__item">
                                 <a class="header__link" href="#">footwear</a>
@@ -35,7 +35,7 @@
                         </ul>
                         <button class="header__search" type="button">
                             <img src="img/icons/search-normal.svg" alt="Поиск">
-                            <span>Search </span>
+                            <span>search </span>
                         </button>
                     </div>
                 </div>
@@ -86,37 +86,48 @@
         <main class="main">
             <section class="products-slides">
                 <div class="container">
-                    <div class="products__inner">
-                        <h2 class="products__title">Top Sellers</h2>
-                        <div class="controls-bar">
-                            <button class="filters">
-                                <img src="img/icons/filter_alt.svg" alt="">
-                                FILTERS
-                            </button>
-                            <button class="sort">
-                                <img src="img/icons/sort_black.svg" alt="">
-                                <span>SORT BY</span>
-                            </button>
-                            <div class="action__icons">
-                                <button class="icon__btn icon__btn-list "><img src="img/icons/menu.svg" alt=""></button>
-                                <div class="divider"></div>
-                                <button class="icon__btn icon__btn-group"><img src="img/icons/plitka.svg"
-                                        alt=""></button>
+                   <div class="">
+                        <div class="products__inner">
+                            <h2 class="products__title">Top Sellers</h2>
+                            <div class="controls-bar">
+                                <button class="filters">
+                                    <img src="img/icons/filter_alt.svg" alt="">
+                                    FILTERS
+                                </button>
+                                <button class="sort">
+                                    <img src="img/icons/sort_black.svg" alt="">
+                                    <span>SORT BY</span>
+                                </button>
+                                <div class="action__icons">
+                                    <button class="icon__btn icon__btn-list"><img src="img/icons/menu.svg" alt=""></button>
+                                    <div class="divider"></div>
+                                    <button class="icon__btn icon__btn-group"><img src="img/icons/plitka.svg"
+                                            alt=""></button>
+                                </div>
                             </div>
                         </div>
-
-                    <!-- <div class="parent" style="display: flex; gap: 20px; background: #ccc; padding: 10px;">
-                        <div style="background: white;">Item 1</div>
-                        <div style="background: white;">Item 2</div>
-                    </div> -->
-
-                    </div>
-                    <div class="sellers-top__slider"></div>
-                    <button class="filter__all" type="button">
-                        see all
-                    </button>
+                        <div class="sellers-top__slider">
+                            <div class="swiper swiper-top__sellers">
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">cros_1</div>
+                                    <div class="swiper-slide">cros_2</div>
+                                    <div class="swiper-slide">cros_3</div>
+                                </div>
+                                <div class="swiper-pagination"></div>
+                                <div class="swiper-button-next"></div>
+                                <div class="swiper-button-prev"></div>
+                            </div>
+                        </div>
+                        
+                        <div class="btn__all">
+                            <button class="filters " type="button">SEE ALL
+                            </button>
+                        </div>
+                        
+                   </div>
                 </div>
             </section>
+            <section class="product-"></section>
             <div class="products-section">
                 <div class="section-header">
                     <h2>Top Sellers</h2>
