--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -31,7 +31,7 @@
                             </li>
                             <li class="header__item">
                                 <a class="header__link" href="#">slides</a>
-                            </li> 
+                            </li>
                         </ul>
                         <button class="header__search" type="button">
                             <img src="img/icons/search-normal.svg" alt="Поиск">
@@ -84,47 +84,47 @@
             </div>
         </header>
         <main class="main">
-            <section class="products-slides">
+            <section class="top-sellers-section">
                 <div class="container">
-                   <div class="">
-                        <div class="products__inner">
-                            <h2 class="products__title">Top Sellers</h2>
-                            <div class="controls-bar">
-                                <button class="filters">
-                                    <img src="img/icons/filter_alt.svg" alt="">
-                                    FILTERS
-                                </button>
-                                <button class="sort">
-                                    <img src="img/icons/sort_black.svg" alt="">
-                                    <span>SORT BY</span>
-                                </button>
-                                <div class="action__icons">
-                                    <button class="icon__btn icon__btn-list"><img src="img/icons/menu.svg" alt=""></button>
-                                    <div class="divider"></div>
-                                    <button class="icon__btn icon__btn-group"><img src="img/icons/plitka.svg"
-                                            alt=""></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sellers-top__slider">
-                            <div class="swiper swiper-top__sellers">
-                                <div class="swiper-wrapper">
-                                    <div class="swiper-slide">cros_1</div>
-                                    <div class="swiper-slide">cros_2</div>
-                                    <div class="swiper-slide">cros_3</div>
-                                </div>
-                                <div class="swiper-pagination"></div>
-                                <div class="swiper-button-next"></div>
-                                <div class="swiper-button-prev"></div>
-                            </div>
-                        </div>
-                        
-                        <div class="btn__all">
-                            <button class="filters " type="button">SEE ALL
+                    <div class="section-header">
+                        <h2 class="products__title">Top Sellers</h2>
+                        <div class="controls-bar">
+                            <button class="filters">
+                                <img src="img/icons/filter_alt.svg" alt="Filter">
+                                <span>FILTERS</span>
                             </button>
+                            <button class="sort">
+                                <img src="img/icons/sort_black.svg" alt="Sort">
+                                <span>SORT BY</span>
+                            </button>
+                            <div class="action__icons">
+                                <button class="icon__btn icon__btn-list">
+                                    <img src="img/icons/menu.svg" alt="List View">
+                                </button>
+                                <!-- <div class="divider"></div> -->
+                                <button class="icon__btn icon__btn-group">
+                                    <img src="img/icons/plitka.svg" alt="Grid View">
+                                </button>
+                            </div>
                         </div>
-                        
-                   </div>
+                    </div>
+                    <div class="sellers-top__slider">
+                        <div class="swiper swiper-top__sellers">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">cros_1</div>
+                                <div class="swiper-slide">cros_2</div>
+                                <div class="swiper-slide">cros_3</div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
+                        </div>
+                    </div>
+                    <div class="btn__all">
+                        <button class="filters " type="button">SEE ALL
+                        </button>
+                    </div>
+
                 </div>
             </section>
             <section class="product-"></section>
