--- a/maket_№4-shop-cros-copy/index.html
+++ b/maket_№4-shop-cros-copy/index.html
@@ -92,7 +92,7 @@
                                 <span>SORT BY</span>
                             </button>
                             <div class="action__icons">
-                                <button class="icon-btn ">
+                                <button class="iconbtn ">
                                     <img src="img/icons/grid-view.svg" alt="Grid View">
                                 </button>
                                 <button class="icon-btn">
