--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -101,16 +101,23 @@
                                 <button class="icon__btn icon__btn-list">
                                     <img src="img/icons/menu.svg" alt="List View">
                                 </button>
-                                <!-- <div class="divider"></div> -->
-                                <button class="icon__btn icon__btn-group">
+                                <button class="icon__btn icon__btn-grid">
                                     <img src="img/icons/plitka.svg" alt="Grid View">
                                 </button>
                             </div>
                         </div>
                     </div>
-                    <div class="sellers-top__slider">
-                        <div class="swiper swiper-top__sellers">
-                            <div class="swiper-wrapper">
+                    <div class="product-slider">
+                        <button class="carousel-arrow carousel-arrow--left" id="carousel1-prev">
+                            <img src="img/icons/arrow-left.svg" alt="Previous">
+                        </button>
+                        <div class="products-grid" id="products-container-1">
+                        </div>
+                        <button class="carousel-arrow carousel-arrow--right" id="carousel1-next">
+                            <img src="img/icons/arrow-right.svg" alt="Next">
+                        </button>
+                        <!--  <div class="swiper swiper-top__sellers">
+                        <div class="swiper-wrapper">
                                 <div class="swiper-slide">cros_1</div>
                                 <div class="swiper-slide">cros_2</div>
                                 <div class="swiper-slide">cros_3</div>
@@ -118,10 +125,10 @@
                             <div class="swiper-pagination"></div>
                             <div class="swiper-button-next"></div>
                             <div class="swiper-button-prev"></div>
-                        </div>
+                        </div> -->
                     </div>
-                    <div class="btn__all">
-                        <button class="filters " type="button">SEE ALL
+                    <div class="see-all-container">
+                        <button class="see-all-btn">SEE ALL
                         </button>
                     </div>
 
