--- a/maket_№4-shop-cros/index.html
+++ b/maket_№4-shop-cros/index.html
@@ -122,10 +122,45 @@
                         <button class="see-all-btn">SEE ALL
                         </button>
                     </div>
-
                 </div>
             </section>
-            <section class="product-"></section>
+            <section class="slogan-section">
+                <div class="slogan-box">
+                    <div class="section-slogan-text">
+                        <Span class="span-slogan">Not</Span>
+                        <div class="border-1"></div>
+                        <Span class="span-slogan">Just For</Span>
+                        <div class="border-2"></div>
+                        <Span class="span-slogan">Street Anymore</Span>
+                        <div class="border-3"></div>
+                    </div>
+                    <div class="slogan-labeles">
+                        <img class="nike-lable" src="img/lable/nike.png" alt="Nike lable">
+                        <img src="img/lable/adidas.png" alt="Adidas lable">
+                        <img src="img/lable/vans.png" alt="Vans lable">
+                        <img src="img/lable/new_balance.png" alt="New Balance lable">
+                    </div>
+                </div>
+            </section>
+            <section class="promo-section">
+                <div class="container">
+                    <div class="promo-section_runline">
+                        <div class="runline runline1">
+                            <span>just do it</span>
+                            <img src="img/lable/nike.png" alt="">
+                        </div>
+                        <div class="runline runline2">
+                            <span>just do it</span>
+                            <img src="img/lable/nike.png" alt="">
+                        </div>
+                    </div>
+                    <div class="promo-section_photo">
+                        <img src="img/decor/bg_image_section.jpg" alt="">
+                    </div>
+                </div>
+            </section>
+
+
             <div class="products-section">
                 <div class="section-header">
                     <h2>Top Sellers</h2>
